# Blog: http://blog.csdn.net/fengbingchun/article/details/77193530
# CMake file for CUDA_Test
CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(CUDA_Test)

SET(CUDA_DIR /usr/local/cuda-10.0)
# Note: the order of the following five statements
SET(CMAKE_CUDA_COMPILER ${CUDA_DIR}/bin/nvcc)
SET(CUDA_TOOLKIT_ROOT_DIR ${CUDA_DIR})
#SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} std=c++11")
ENABLE_LANGUAGE(CUDA)
FIND_PACKAGE(CUDA REQUIRED)

FIND_PACKAGE(OpenCV 2)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

SET(PATH_CPP_FILES ./../../demo/CUDA_Test)
SET(PATH_CU_FILES ./../../demo/CUDA_Test)

FILE(GLOB_RECURSE CPP_LIST ${PATH_CPP_FILES}/*.cpp)
FILE(GLOB_RECURSE CU_LIST ${PATH_CU_FILES}/*.cu)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c++11")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

# 编译可执行程序，即生成可执行文件CUDA_Test
#ADD_EXECUTABLE(CUDA_Test ${CPP_LIST} ${CU_LIST}) # 不包括编译*.cu文件，需要使用CUDA_ADD_EXECUTABLE命令
CUDA_ADD_EXECUTABLE(CUDA_Test ${CPP_LIST} ${CU_LIST})
# 用来为target添加需要链接的共享库，指定工程所用的依赖库，包括动态库和静态库
TARGET_LINK_LIBRARIES(CUDA_Test ${OpenCV_LIBS})
